--- a/css/style.css
+++ b/css/style.css
@@ -3,9 +3,7 @@
   --brand-background-color: #fff;
 }
 body {
-  font-family: Roboto sans-serif;
-  color: var(--brand-color);
-  background-color: var(--brand-background-color);
+  font-family: 'Roboto', sans-serif;
 }
 
 a,
@@ -53,15 +51,8 @@ p {
   font-size: 16px;
   font-weight: 500;
   line-height: 1.5;
-  border-radius: 4px;
-  border: 1px solid var(--cornflower, #e7e9fc);
-  background: var(--cloud, #f4f4fd);
 }
 .filter-button:hover {
-  border-radius: 4px;
-  background: var(--ocean, #404bbf);
-  box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.12),
-    0px 2px 1px 0px rgba(0, 0, 0, 0.08), 0px 3px 1px 0px rgba(0, 0, 0, 0.1);
   color: var(--white, #fff);
 }
 
