--- a/css/style.css
+++ b/css/style.css
@@ -13,16 +13,7 @@ ol {
   text-decoration: none;
   color: var(--brand-color);
 }
-h1 {
-  color: var(--white, #fff);
-  text-align: center;
 
-  font-size: 56px;
-
-  font-weight: 700;
-  line-height: 1.07143;
-  letter-spacing: 1.12px;
-}
 h2 {
   color: var(--navyblue, #2e2f42);
   text-align: center;
@@ -95,6 +86,32 @@ p {
 }
 
 /* main */
+/* section1 */
+.section {
+  background-color: #2e2f42;
+}
+.section-title {
+  color: #ffffff;
+  text-align: center;
+  font-size: 56px;
+  font-weight: 700;
+  line-height: 1.07;
+  letter-spacing: 1.12px;
+}
+.section-button {
+  font-family: 'Roboto', sans-serif;
+  background-color: #4d5ae5;
+  color: #ffffff;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.64px;
+  cursor: pointer;
+}
+.section-button:hover,
+.section-button:focus {
+  background-color: #404bbf;
+}
 
 /* footer */
 
