--- a/css/style.css
+++ b/css/style.css
@@ -115,6 +115,20 @@ h3 {
   letter-spacing: 0.32px;
 }
 /* footer */
+.footer {
+  background: #2e2f42;
+}
+.footer-text {
+  color: #f4f4fd;
+  font-family: Roboto;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 1.5; /* 150% */
+  letter-spacing: 0.32px;
+}
+.header-logo > .header-logo-studio {
+  color: #f4f4fd;
+}
 
 /* section filter */
 .filter-button {
