--- a/css/style.css
+++ b/css/style.css
@@ -162,3 +162,9 @@ h3 {
   line-height: 1.2;
   letter-spacing: 0.4px;
 }
+.portfolio-list-text {
+  color: #434455;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.32px;
+}
